# Corvus.Python

./: .flake8  .gitignore  GitVersion.yml  README.md  behave.ini  build.ps1  build.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  python-app.yml
.zf/: config.ps1
entrypoints/: create_session.ipynb  example.ipynb  example.py  sharepoint_list_folders.ipynb
src/corvus_python/: README.md
src/corvus_python/auth/: __init__.py  local_cred_utils.py
src/corvus_python/email/: __init__.py  acs_email_service.py  errors.py  models.py
src/corvus_python/monitoring/: __init__.py  tracing.py
src/corvus_python/pyspark/: __init__.py  spark_utils.py
src/corvus_python/pyspark/storage/: __init__.py  azure_data_lake_storage_configuration.py  local_file_system_storage_configuration.py  storage_configuration.py
src/corvus_python/pyspark/synapse/: __init__.py  sync_tables_locally.py
src/corvus_python/pyspark/utilities/: __init__.py  null_safe_join.py  session_utils.py
src/corvus_python/repositories/: __init__.py  database_definition.py  delta_table_repository.py  polars_azure_table_repository.py  polars_csv_data_repository.py  polars_delta_table_repository.py  polars_excel_data_repository.py  polars_json_data_repository.py  polars_ndjson_data_repository.py
src/corvus_python/schema/: __init__.py  pandera_to_deltalake_schema.py  pandera_to_polars_schema.py
src/corvus_python/sharepoint/: __init__.py  sharepoint_utils.py
src/corvus_python/spark_utils/: __init__.py  local_spark_utils.py
src/corvus_python/sql/: __init__.py  sql_utils.py
src/corvus_python/sql/fabric/: __init__.py  fabric_sql_utils.py
src/corvus_python/sql/repositories/: __init__.py  (+1 more)
src/corvus_python/storage/: __init__.py  azure_blob_file_storage.py  azure_data_lake_storage_configuration.py  file_storage.py  local_file_storage.py  local_file_system_storage_configuration.py  sharepoint_file_storage.py  storage_configuration.py
src/corvus_python/synapse/: __init__.py  synapse_utils.py  sync_tables_locally.py
src/corvus_python/testing/: __init__.py  polars_testing_utils.py
src/corvus_python/tracing/: __init__.py  tracing.py
src/corvus_python/word_document_generator/: word_document_generator.py
synapse_utils/: local-submit-batch-job.ps1.template  submit-synapse-batch-job.ps1  synapse-package-upload.ps1
tests/bdd/: environment.py
tests/bdd/sample_feature_group/: write_table.feature
tests/bdd/spark_session/: get_or_create_spark_session.feature
tests/bdd/steps/: generate_document.py  get_or_create_spark_session.py  write_table.py
tests/bdd/word_document_generator/: .gitignore  generate_document.feature
tests/unit/: test_acs_email_service.py  test_azure_blob_file_storage.py  test_df_utils.py  test_email_models.py  test_get_or_create_spark_session.py  test_local_file_storage.py  test_polars_testing_utils.py  test_sample.py  test_sharepoint_file_storage.py  test_sharepoint_utils.py  test_sql_utils.py
(+18 files in other folders)
